Correct faq_es (numbers doubled)

--- a/source/faq.html
+++ b/source/faq.html
@@ -132,19 +132,19 @@
 
     <ul>
       <li>
-        <span>1. If you wish to participate in the Conference, please consult with due anticipation if you precise a visa to enter
+        <span>If you wish to participate in the Conference, please consult with due anticipation if you precise a visa to enter
           the Argentine Republic. For information on nationalities that require a visa to enter Argentina, diplomatic or
           official passports, please consult the following link:
           <a href="http://www.migraciones.gov.ar/accesible/indexA.php?visas">http://www.migraciones.gov.ar/accesible/indexA.php?visas</a>
         </span>
       </li>
       <li>
-        <span>2. Foreigners who do not require a visa to enter the Argentine Republic, must present their valid passport and proof
+        <span>Foreigners who do not require a visa to enter the Argentine Republic, must present their valid passport and proof
           of accreditation to the Conference at the immigration point of entry into Argentina.
         </span>
       </li>
       <li>
-        <span>3. Foreigners holding passports that require a visa to enter the Argentine Republic, should contact the Argentine
+        <span>Foreigners holding passports that require a visa to enter the Argentine Republic, should contact the Argentine
           Consular Representation before which they wish to process their visa, 45 days prior to the date of their trip.
           For contact information of Consulates and Embassies of the Argentine Republic, please consult the following link:
           <a href="http://mrecic.gov.ar/representaciones">http://mrecic.gov.ar/representaciones</a>
@@ -152,7 +152,7 @@
       </li>
 
       <li>
-        <span>4. If you do not have Argentine Consular Representation in your country of residence, you will have the possibility
+        <span>If you do not have Argentine Consular Representation in your country of residence, you will have the possibility
           of requesting your visa remotely. For this exceptional procedure, you must follow the following steps:
         </span>
         <ul>
@@ -192,7 +192,7 @@
       </li>
       <li>
         <span>
-          5. In exceptional circumstances, you may process your visa before an Argentine Consular Representation and coordinate with
+          In exceptional circumstances, you may process your visa before an Argentine Consular Representation and coordinate with
           this Representation the withdrawal of your visa from another Consular Office.
           <br />Details of the visa procedure, such as the documentation to be presented and the cost of the visa, will be informed
           to the applicant by the corresponding Consular Representation.
