--- a/source/faq_es.html
+++ b/source/faq_es.html
@@ -45,7 +45,7 @@
           un correo automático de confirmación a la casilla de correo que indicaste.</span>
       </li>
     </ul>
-    <h2 style="text-align:center;">Visas</h2>
+    <!-- <h2 style="text-align:center;">Visas</h2>
     <ul>
       <li>
         <strong>¿Necesito visa para ingresar a Argentina?</strong>
@@ -53,7 +53,7 @@
         <span>Podés encontrar información sobre ingreso al pa&Iacute;s en
           <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
       </li>
-    </ul>
+    </ul> -->
 
     <h2 style="text-align:center;">Agenda y sesiones</h2>
     <ul>
@@ -144,19 +144,19 @@
           <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
       </li> -->
       <li>
-        <span>1. Si usted participará de la Conferencia, por favor consulte con la debida anticipación si requiere visa para ingresar
+        <span>Si usted participará de la Conferencia, por favor consulte con la debida anticipación si requiere visa para ingresar
           a la República Argentina. Para información sobre nacionalidades que requieren visa para ingresar a la Argentina
           en pasaportes ordinarios, diplomáticos u oficiales, por favor consulte el siguiente enlace:
           <a href="http://www.migraciones.gov.ar/accesible/indexA.php?visas">http://www.migraciones.gov.ar/accesible/indexA.php?visas</a>
         </span>
       </li>
       <li>
-        <span>2. Aquellos extranjeros que no requieran visa para ingresar a la República Argentina, deberán presentar su pasaporte
+        <span>Aquellos extranjeros que no requieran visa para ingresar a la República Argentina, deberán presentar su pasaporte
           válido y la constancia de acreditación a la Conferencia en el punto migratorio de ingreso a la Argentina.
         </span>
       </li>
       <li>
-        <span>3. Aquellos extranjeros portadores de pasaportes ordinarios que requieran visa para ingresar a la República Argentina,
+        <span>Aquellos extranjeros portadores de pasaportes ordinarios que requieran visa para ingresar a la República Argentina,
           deberán tomar contacto con la Representación Consular argentina ante la cual desean tramitar su visa, con 45 días
           de anticipación a la fecha de su viaje. Para datos de contacto de Consulados y Embajadas de la República Argentina,
           por favor consulte el siguiente enlace:
@@ -165,7 +165,7 @@
       </li>
 
       <li>
-        <span>4. De no contar con Representación Consular argentina en su país de residencia, usted tendrá la posibilidad de solicitar
+        <span>De no contar con Representación Consular argentina en su país de residencia, usted tendrá la posibilidad de solicitar
           su visa a distancia. Para este procedimiento excepcional, usted deberá seguir los siguientes pasos:
         </span>
         <ul>
@@ -207,7 +207,7 @@
       </li>
       <li>
         <span>
-          5. En circunstancias excepcionales, usted podrá tramitar su visa ante una Representación Consular argentina y coordinar con
+          En circunstancias excepcionales, usted podrá tramitar su visa ante una Representación Consular argentina y coordinar con
           dicha Representación el retiro de su visa ante otra Sede Consular.
           <br />Detalles del procedimiento de visado, tales como la documentación a presentar y el costo de la visa, serán informados
           al solicitante por la Representación Consular correspondiente.
