Correct call-for-proposals

--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -1,4 +1,8 @@
---- layout: default title: IODC18 lang: en ---
+---
+  layout: default
+  title: IODC18
+  lang: en
+---
 
 <main role="main" class="wrapper">
   <!-- main content starts here -->
