--- a/source/faq.html
+++ b/source/faq.html
@@ -1,7 +1,7 @@
 ---
- layout: default
- title: IODC18
- lang: en
+  layout: default
+  title: IODC18
+  lang: en
 ---
 
 <main role="main" class="wrapper">
@@ -44,7 +44,7 @@
           will also receive an automatic confirmation email.</span>
       </li>
     </ul>
-    <h2 style="text-align:center;">Visas</h2>
+    <!-- <h2 style="text-align:center;">Visas</h2>
     <ul>
       <li>
         <strong>Do I need a visa to travel to Argentina?</strong>
@@ -52,7 +52,7 @@
         <span>Please visit
           <a href="argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a> to find information about traveling to Argentina.</span>
       </li>
-    </ul>
+    </ul> -->
 
     <h2 style="text-align:center;">Agenda and Sessions</h2>
     <ul>
@@ -131,6 +131,7 @@
     </ul> -->
 
     <ul>
+
       <li>
         <span>If you wish to participate in the Conference, please consult with due anticipation if you precise a visa to enter
           the Argentine Republic. For information on nationalities that require a visa to enter Argentina, diplomatic or
@@ -142,11 +143,13 @@
         <span>Foreigners who do not require a visa to enter the Argentine Republic, must present their valid passport and proof
           of accreditation to the Conference at the immigration point of entry into Argentina.
         </span>
+        <span>Please visit
+          <a href="argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a> to find information about traveling to Argentina.</span>
       </li>
       <li>
-        <span>Foreigners holding passports that require a visa to enter the Argentine Republic, should contact the Argentine
-          Consular Representation before which they wish to process their visa, 45 days prior to the date of their trip.
-          For contact information of Consulates and Embassies of the Argentine Republic, please consult the following link:
+        <span>Foreigners holding passports that require a visa to enter the Argentine Republic, should contact the Argentine Consular
+          Representation before which they wish to process their visa, 45 days prior to the date of their trip. For contact
+          information of Consulates and Embassies of the Argentine Republic, please consult the following link:
           <a href="http://mrecic.gov.ar/representaciones">http://mrecic.gov.ar/representaciones</a>
         </span>
       </li>
@@ -192,8 +195,8 @@
       </li>
       <li>
         <span>
-          In exceptional circumstances, you may process your visa before an Argentine Consular Representation and coordinate with
-          this Representation the withdrawal of your visa from another Consular Office.
+          In exceptional circumstances, you may process your visa before an Argentine Consular Representation and coordinate with this
+          Representation the withdrawal of your visa from another Consular Office.
           <br />Details of the visa procedure, such as the documentation to be presented and the cost of the visa, will be informed
           to the applicant by the corresponding Consular Representation.
 
