--- a/source/faq_es.html
+++ b/source/faq_es.html
@@ -154,6 +154,8 @@
         <span>Aquellos extranjeros que no requieran visa para ingresar a la República Argentina, deberán presentar su pasaporte
           válido y la constancia de acreditación a la Conferencia en el punto migratorio de ingreso a la Argentina.
         </span>
+        <span>Podés encontrar información sobre ingreso al pa&Iacute;s en
+          <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
       </li>
       <li>
         <span>Aquellos extranjeros portadores de pasaportes ordinarios que requieran visa para ingresar a la República Argentina,
