Create venue.html and venue_es.html

--- a/source/index.html
+++ b/source/index.html
@@ -19,6 +19,7 @@ hide_back_button: true
     <a class="button" href="/committee.html">Programme Committee</a>
     <a class="button" href="/code-of-conduct.html">Code of Conduct</a>
     <a class="button" href="/faq.html">FAQ</a>
+    <a class="button" href="/venue.html">Venue</a>
   </nav>
 
   <div class="past-events section">
