--- a/source/index_es.html
+++ b/source/index_es.html
@@ -19,6 +19,7 @@ hide_back_button: true
     <a class="button" href="/committee.html">COMITÉ ACADÉMICO</a>
     <a class="button" href="/code-of-conduct.html">CÓDIGO DE CONDUCTA</a>
     <a class="button" href="/faq.html">PREGUNTAS FRECUENTES</a>
+    <a class="button" href="/venue_es.html">Locación</a>    
   </nav>
 
   <div class="past-events section">
