Remove button venue

--- a/source/index.html
+++ b/source/index.html
@@ -19,14 +19,12 @@ hide_back_button: true
     <a class="button" href="/committee.html">Programme Committee</a>
     <a class="button" href="/code-of-conduct.html">Code of Conduct</a>
     <a class="button" href="/faq.html">FAQ</a>
-    <a class="button" href="/venue.html">Venue</a>
+    <!-- <a class="button" href="/venue.html">Venue</a> -->
   </nav>
-
+  
   <div class="past-events section">
     <h2>Previous Events</h2>
     <a href="http://conf2transfer.wpengine.com/" title="IODC16" class="past-events--iodc16" target="_blank"><img src="{{ '/images/iodc-16.png' | relative_url }}" alt=""></a>
     <a href="http://conf3.wpengine.com/" title="IODC15" class="past-events--iodc15" target="_blank"><img src="{{ '/images/iodc-15.png' | relative_url }}" alt=""></a>
   </div>
-
-
 </main>
